chore: reenable entire midi-writer-js api
